modify jvm bookmark and add vimrc, Spring MVC